--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Hello, I am Md. Shahadat Hossaain. Hope you are well. I am student of Ineternati
 </li>
 <br>
 <br>
-<h2 align="left"><em> <img src="C:\Users\U\Desktop\WEB Development\Image\Travel.png" height="40" width="40" alt="Check Your internet connection"> Travelling<hr></em></h2> <li>
+<h2 align="left"><em> <img src="Image\Travel.png" height="40" width="40" alt="Check Your internet connection"> Travelling<hr></em></h2> <li>
 I love to travel very much. I like to spend time in a quiet place away from the noise of cars and people. I like mountains very much. Not much went though. The sound of ocean waves and the flow of water makes me feel good.
 </li> <table>
   <tr>
