--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <br>
 Hello, I am Md. Shahadat Hossaain. Hope you are well. I am student of Ineternational Islamic university chattogram. I completed my higer education from <a href="https://navycollegectg.edu.bd/"> <b>"Bangladesh Nou-Bahini School and College"</b></a> whit GPA 5. I done my primary lavel from village. I was S.P.L in <a href="https://www.facebook.com/PHAA1942/?hc_ref=ARREXWLrvgIW41NMWniRuTddx9SfNifyumDDPduUtkcNs91LiGqHWiBvJhsL0SHSVt4&fref=nf&__xts__[0]=68.ARB3x6hHzElv_56wO5lxYkNrwUOZ7a5d1moUZpOLX3JrhzMErfkZbg9pre96bUKbmohIvAXWzCOY5S2UHdgIXLmyF-O3qeEZCLAsfGuTlB8F7G0z6nWSkXlIuKKvumDGCIRuegxn8JDUtLmOK-jddeSYK5IvD2flmXsfVs_KMudR9kLE53Y2QKkEr4UN2iDcbionq5kKZe8oPaVk4fQ6l6RZ6ALlojk-q4EtN4N3CS2iSw79_blvwxyJrV6klhZ8JqKgVAEKBf8rh9uyAcguCkPXzbaXpi6ipfAqAQ3kTv6-U8JvguWd3bMlqmGU5qJxxbSg"><b>"P.H.Ameen Academy Scout group"</a></b>. Now i am studing at <a href="https://www.iiuc.ac.bd/"> <b>"IIUC"</b></a> with Bsc in CCE </dt>
 <br><br>Link to : <a href="Myself.html">Contact for information</a>
-<h2 align="left"><em> <img src="C:\Users\U\Desktop\WEB Development\Image\Teaching.png" height="40" width="45" alt="Check Your internet connection"> Teaching  <hr></em> </h2> <li>
+<h2 align="left"><em> <img src="Image\Teaching.png" height="40" width="45" alt="Check Your internet connection"> Teaching  <hr></em> </h2> <li>
  After completed my SSC examination, I started my teaching life with my cousin. After few days, I started to teaching  in a coaching center which is <b>"Study village"</b>. From there i continue my teaching still now.Although now doing some private tuition. I don't have lots of time but it's needed for me and i'm enjoing .
 </li>
 <br>
