--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ I love to travel very much. I like to spend time in a quiet place away from the 
 </table>
 <br>
 <br>
-<h2 align="left"> <em> <img src="\Image\graden.png" height="40" width="40" alt="Check Your internet connection"> Gardening  <hr> </em></h2> <li>
+<h2 align="left"> <em> <img src="Image\graden.png" height="40" width="40" alt="Check Your internet connection"> Gardening  <hr> </em></h2> <li>
 When I was at class 6, I visited one of my unlce's house and see how beutifull his gradeen and it's empreste me so much. Then i start grading On the roof of my house. It was difficult in the begginning. Now i have a complete graden which included some vagetable like zucchini,dhoniya also aloe-vera, Guava etc.
 <table>
   <tr>
