--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ When I was at class 6, I visited one of my unlce's house and see how beutifull h
 <br>
 <br>
   
-<h2 align="left"> <em> <img src="\Image\Qualification.png" height="40" width="40" alt="Check Your internet connection">  "Educational Qualification" <hr> </em> </h2>
+<h2 align="left"> <em> <img src="Image\Qualification.png" height="40" width="40" alt="Check Your internet connection">  "Educational Qualification" <hr> </em> </h2>
 <table align="center" border="2" width="750" height=80 >
   <tr>
     <th align="center">"Qualification"</th>
