--- a/Myself.html
+++ b/Myself.html
@@ -8,7 +8,7 @@
 </head>
 <body> <div align="center">
 
-  <img src="Image\IMG-20210403-WA0052-modified.png" height="250" width="250" alt="Check Your internet connection"></div>
+  <img src="Image/image2.png" height="250" width="250" alt="Check Your internet connection"></div>
 
 <b>
   <div align="center" width="1500">
