--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Md.Shahadat Hossain</title>
+  <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-  <div align="center">
+
+  <div id="kt3" align="center">
   <Marquee> <dfn> <b><h3>Hello dear, Welcome to <em> "Muhammad Shahadat hossain's"</em> Website</h3></b></dfn></Marquee>
   </div>
- <table width="1000">
+ <table id="t2" width="1000">
 
     <tr>
     <td> <div align="center">
@@ -54,6 +56,7 @@ When I was at class 6, I visited one of my unlce's house and see how beutifull h
 </li> <br>
 <br>
 <h2 align="left"> <img src="Image\Skill.png" height="40" width="40" alt="Check Your internet connection"> <em> Skill <hr></em> </h2>
+<div id="tk2">
 <table align="center" width="500">
    <tr>
      <td> <h4><li>Microsoft Word 🌟🌟🌟🌟🌟 </li></h4></td>
@@ -67,13 +70,14 @@ When I was at class 6, I visited one of my unlce's house and see how beutifull h
      <td> <h4> <li>C 🌟🌟🌟</li></h4></td>
      <td>  <h4><li>Teaching🌟🌟🌟🌟🌟</li></h4> </td>
    </tr>
-</table>
+
+</table></div>
 <br>
 <br>
-  
-<h2 align="left"> <em> <img src="Image\Qualification.png" height="40" width="40" alt="Check Your internet connection">  "Educational Qualification" <hr> </em> </h2>
+<h2 align="left"> <em>  "Educational Qualification" <hr> </em> </h2>
+
 <table align="center" border="2" width="750" height=80 >
-  <tr>
+  <tr id="s1234">
     <th align="center">"Qualification"</th>
     <th align="center">"Institution"</th>
     <th align="center">"Achive"</th>
