--- a/Myself.html
+++ b/Myself.html
@@ -8,7 +8,7 @@
 </head>
 <body> <div align="center">
 
-  <img src="Image/image2.png" height="250" width="250" alt="Check Your internet connection"></div>
+  <img src="C:\Users\U\Desktop\WEB Development\Image\IMG-20210403-WA0052-modified.png" height="250" width="250" alt="Check Your internet connection"></div>
 
 <b>
   <div align="center" width="1500">
@@ -28,6 +28,10 @@
 <tr>
   <td> Contact Number </td>
   <td>: <a href="tel: +88018570-02231">Call now </td>
+</tr>
+<tr>
+  <td> Telegram ID</td>
+  <td>: <a href="https://t.me/Isaac_NewtonSir"> Contact now </td>
 </tr>
 <tr>
   <td>Mail </td>
