--- a/index.html
+++ b/index.html
@@ -7,17 +7,27 @@
   <title>Md.Shahadat Hossain</title>
   <link rel="stylesheet" href="Style.css">
 </head>
-<body>
+<style>
+a:link {
 
+  background: #C39A21;
+  background-image: linear-gradient(3deg, #9fff3b 0%, #ff2525 74%) !important;
+  -webkit-background-clip: text !important;
+  -webkit-text-fill-color: transparent !important;
+}
+
+
+</style>
+}
+<body>
   <div id="kt3" align="center">
-  <Marquee> <dfn> <b><h3>Hello dear, Welcome to <em> "Muhammad Shahadat hossain's"</em> Website</h3></b></dfn></Marquee>
+  <Marquee> <dfn> <b><h3>"Welcome" to <em> "Muhammad Shahadat Hossain's"</em> Website</h3></b></dfn></Marquee>
   </div>
  <table id="t2" width="1000">
-
     <tr>
     <td> <div align="center">
-     <h1> <em>"Muhammad Shahadat Hossain"</dt> </em></h1>
-         Student of <a href="https://www.iiuc.ac.bd/"> <b>"International Islamic University"</b></a><br>
+     <h1> <em id="name">"Muhammad Shahadat Hossain" </em></dt> </h1>
+         Student of <b>"International Islamic University"</b></a><br>
          Deparment of <b>"Computer and Communication Engineering"</b><br>
          IIUC
          <dt>Kumira,Chattogram 24.07.2022   </div></td>
@@ -27,26 +37,45 @@
     </tr>
 
  </table>
+<div id="slot1color">
+<br>
+Hello, I am Md. Shahadat Hossaain. Hope you are well. I am student of <a href="https://www.iiuc.ac.bd/"> <b>Ineternational Islamic university chattogram</b> </a>. I completed my higer education from <a href="https://navycollegectg.edu.bd/"> <b>"Bangladesh Nou-Bahini School and College"</b></a> whit GPA 5. I done my primary lavel from village. I was S.P.L in <a href="https://www.facebook.com/PHAA1942/?hc_ref=ARREXWLrvgIW41NMWniRuTddx9SfNifyumDDPduUtkcNs91LiGqHWiBvJhsL0SHSVt4&fref=nf&__xts__[0]=68.ARB3x6hHzElv_56wO5lxYkNrwUOZ7a5d1moUZpOLX3JrhzMErfkZbg9pre96bUKbmohIvAXWzCOY5S2UHdgIXLmyF-O3qeEZCLAsfGuTlB8F7G0z6nWSkXlIuKKvumDGCIRuegxn8JDUtLmOK-jddeSYK5IvD2flmXsfVs_KMudR9kLE53Y2QKkEr4UN2iDcbionq5kKZe8oPaVk4fQ6l6RZ6ALlojk-q4EtN4N3CS2iSw79_blvwxyJrV6klhZ8JqKgVAEKBf8rh9uyAcguCkPXzbaXpi6ipfAqAQ3kTv6-U8JvguWd3bMlqmGU5qJxxbSg"><b>"P.H.Ameen Academy Scout group"</a></b>. Now i am studing at <a href="https://www.iiuc.ac.bd/"> <b>"IIUC"</b></a> with Bsc in CCE </dt>
+<br><br>👀<a href="Myself.html">Contact for information</a>👀 </div>
+
+<h2 align="left"><img src="Image\Teaching.png" height="40" width="45" alt="Check Your internet connection"> <em id="title"> Teaching</em><hr> </h2><li>
+ <div id="slot1color">After completed my SSC examination, I started my teaching life with my cousin. After few days, I started to teaching  in a coaching center which is <b>"Study village"</b>. From there i continue my teaching still now.Although now doing some private tuition. I don't have lots of time but it's needed for me and i'm enjoing .
+</li>
 
 <br>
-Hello, I am Md. Shahadat Hossaain. Hope you are well. I am student of Ineternational Islamic university chattogram. I completed my higer education from <a href="https://navycollegectg.edu.bd/"> <b>"Bangladesh Nou-Bahini School and College"</b></a> whit GPA 5. I done my primary lavel from village. I was S.P.L in <a href="https://www.facebook.com/PHAA1942/?hc_ref=ARREXWLrvgIW41NMWniRuTddx9SfNifyumDDPduUtkcNs91LiGqHWiBvJhsL0SHSVt4&fref=nf&__xts__[0]=68.ARB3x6hHzElv_56wO5lxYkNrwUOZ7a5d1moUZpOLX3JrhzMErfkZbg9pre96bUKbmohIvAXWzCOY5S2UHdgIXLmyF-O3qeEZCLAsfGuTlB8F7G0z6nWSkXlIuKKvumDGCIRuegxn8JDUtLmOK-jddeSYK5IvD2flmXsfVs_KMudR9kLE53Y2QKkEr4UN2iDcbionq5kKZe8oPaVk4fQ6l6RZ6ALlojk-q4EtN4N3CS2iSw79_blvwxyJrV6klhZ8JqKgVAEKBf8rh9uyAcguCkPXzbaXpi6ipfAqAQ3kTv6-U8JvguWd3bMlqmGU5qJxxbSg"><b>"P.H.Ameen Academy Scout group"</a></b>. Now i am studing at <a href="https://www.iiuc.ac.bd/"> <b>"IIUC"</b></a> with Bsc in CCE </dt>
-<br><br>Link to : <a href="Myself.html">Contact for information</a>
-<h2 align="left"><em> <img src="Image\Teaching.png" height="40" width="45" alt="Check Your internet connection"> Teaching  <hr></em> </h2> <li>
- After completed my SSC examination, I started my teaching life with my cousin. After few days, I started to teaching  in a coaching center which is <b>"Study village"</b>. From there i continue my teaching still now.Although now doing some private tuition. I don't have lots of time but it's needed for me and i'm enjoing .
-</li>
 <br>
-<br>
-<h2 align="left"><em> <img src="Image\Travel.png" height="40" width="40" alt="Check Your internet connection"> Travelling<hr></em></h2> <li>
+
+
+
+<h2 align="left"><img src="Image\Travel.png" height="40" width="40" alt="Check Your internet connection"> <em id="title">Travelling</em><hr></h2> <li>
+</div><div id="slot1color">
+  <table>
+<tr>
+  <td align="left">
 I love to travel very much. I like to spend time in a quiet place away from the noise of cars and people. I like mountains very much. Not much went though. The sound of ocean waves and the flow of water makes me feel good.
-</li> <table>
+After completing my S.S.C examination, all of my friend planed to going somewhere to refresh our mind after long time. After that we decided to going to Napittachora at Mirsarai.
+We all climb two hills. It was too dangerous to climb the two high mountains. We finally saw the fountain.A dip in the spring water ended our fatigue
+
+</td>
+<td align="right">
+  <img src="Image\khoirachori.png" alt="Check Your internet connection" eight="250" width="250">
+  <a href="https://www.toursian.com/tourist_attractions-bangladesh-napittochara_waterfall_mirsarai_chittagong"><b>📍-Napittachora, Mirsarari</b></a>
+</td>
+</tr>
+</table>
+</li> </div><table>
   <tr>
 
   </tr>
 </table>
 <br>
-<br>
-<h2 align="left"> <em> <img src="Image\graden.png" height="40" width="40" alt="Check Your internet connection"> Gardening  <hr> </em></h2> <li>
-When I was at class 6, I visited one of my unlce's house and see how beutifull his gradeen and it's empreste me so much. Then i start grading On the roof of my house. It was difficult in the begginning. Now i have a complete graden which included some vagetable like zucchini,dhoniya also aloe-vera, Guava etc.
+<br><div id="title">
+<h2 align="left"> <em> <img src="Image\graden.png" height="40" width="40" alt="Check Your internet connection"><em id="title"> Gardening  </em><hr></h2> <li>
+</div><div id="slot1color">When I was at class 6, I visited one of my unlce's house and see how beutifull his gradeen and it's empreste me so much. Then i start grading On the roof of my house. It was difficult in the begginning. Now i have a complete graden which included some vagetable like zucchini,dhoniya also aloe-vera, Guava etc.
 <table>
   <tr>
 
@@ -54,28 +83,29 @@ When I was at class 6, I visited one of my unlce's house and see how beutifull h
 </table>
 
 </li> <br>
-<br>
-<h2 align="left"> <img src="Image\Skill.png" height="40" width="40" alt="Check Your internet connection"> <em> Skill <hr></em> </h2>
-<div id="tk2">
+<br><div id="title">
+<h2 align="left"> <img src="Image\Skill.png" height="40" width="40" alt="Check Your internet connection"> <em id="title"> Skill </em><hr></h2>
+</div>
 <table align="center" width="500">
    <tr>
-     <td> <h4><li>Microsoft Word 🌟🌟🌟🌟🌟 </li></h4></td>
-     <td> <h4><li>Microsoft Excel 🌟🌟🌟🌟🌟</li></h4></td>
+     <td> <h4><li id="skill-color">Microsoft Word </li>🌟🌟🌟🌟🌟 </h4></td>
+     <td> <h4><li id="skill-color">Microsoft Excel </li>🌟🌟🌟🌟🌟</h4></td>
    </tr>
    <tr >
-     <td><h4> <li>Java 🌟🌟🌟🌟🌟</li></h4></td>
-    <td> <h4><li>HTML 🌟🌟🌟🌟🌟</li></h4></td>
+     <td> <li id="skill-color">Java </li>🌟🌟🌟🌟🌟</h4></td>
+    <td> <h4><li id="skill-color">HTML </li>🌟🌟🌟🌟🌟</h4></td>
    </tr>
    <tr >
-     <td> <h4> <li>C 🌟🌟🌟</li></h4></td>
-     <td>  <h4><li>Teaching🌟🌟🌟🌟🌟</li></h4> </td>
+     <td> <h4> <li id="skill-color">C</li><div class="progress">
+</div></h4></td>
+     <td>  <h4><li id="skill-color">Teaching</li></h4></td>
    </tr>
 
-</table></div>
+</table>
 <br>
-<br>
-<h2 align="left"> <em>  "Educational Qualification" <hr> </em> </h2>
-
+<br><div id="title">
+  <h2 align="left"> <img src="Image\educational.png" height="50" width="50" alt="Check Your internet connection"> <em id="title"> Educational Qualification</em> <hr></h2>
+</div>
 <table align="center" border="2" width="750" height=80 >
   <tr id="s1234">
     <th align="center">"Qualification"</th>
@@ -85,7 +115,7 @@ When I was at class 6, I visited one of my unlce's house and see how beutifull h
     <th align="center">"Year"</th>
   </tr>
   <tr>
-    <td align="center"> J.S.C </td>
+    <td align="center" id="edu"> <b> J.S.C </b> </td>
     <td align="center"> <a href="https://www.facebook.com/PHAA1942/?hc_ref=ARREXWLrvgIW41NMWniRuTddx9SfNifyumDDPduUtkcNs91LiGqHWiBvJhsL0SHSVt4&fref=nf&__xts__[0]=68.ARB3x6hHzElv_56wO5lxYkNrwUOZ7a5d1moUZpOLX3JrhzMErfkZbg9pre96bUKbmohIvAXWzCOY5S2UHdgIXLmyF-O3qeEZCLAsfGuTlB8F7G0z6nWSkXlIuKKvumDGCIRuegxn8JDUtLmOK-jddeSYK5IvD2flmXsfVs_KMudR9kLE53Y2QKkEr4UN2iDcbionq5kKZe8oPaVk4fQ6l6RZ6ALlojk-q4EtN4N3CS2iSw79_blvwxyJrV6klhZ8JqKgVAEKBf8rh9uyAcguCkPXzbaXpi6ipfAqAQ3kTv6-U8JvguWd3bMlqmGU5qJxxbSg"><b>"P.H. Ameen Academy"</a> </td>
     <td align="center"> G.P.A. : 5 </td>
     <td align="center">Chittagong </td>
